public/css/tomato.styl
@import 'nib'

global-reset()
reset-html5()

feedback()
  cursor: pointer
  &:hover
    background: $lightyeller

timer(fg)
  background: fg
  &:hover
    background: lighten(fg, 10%)

$spacing = 18px
$gridline = unit(3 * $spacing, px)

$timerpadding = unit(2 * $spacing, px)
$timerleft = unit($gridline + $spacing / 2 - $timerpadding, px)
$timerwidth = unit(10 * $spacing, px)
$timerheight = unit(4 * $spacing, px)

$black = #000
$darkgray = #666
$lightgray = #ccc
$white = #efefef
$brightwhite = #fff

$lightyeller = #ffb
$lightblue = #def
$green = #090

$tomato = darken(#c30, 10%)

::-webkit-scrollbar
  height: 8px
  width: 8px
  overflow: visible
::-webkit-scrollbar-button, ::-webkit-scrollbar-corner
  height: 0
  width: 0
::-webkit-scrollbar-thumb
  border-radius: $spacing
  background: rgba(0, 0, 0, 0.5)
::-webkit-scrollbar-track-piece
  background-color: $brightwhite

body
  font: $spacing/1 Rosario, sans-serif
  margin: 0
  padding: 0
  overflow-x: hidden

input[type=text]
  font-size: $spacing
  padding: 1px 3px
  border: solid 1px lighten($tomato, 20%)
  border-radius: 5px

#header
  fixed: top left
  width: 100%
  height: unit($timerheight + 6 * $spacing, px)
  box-shadow: 0 0 unit($spacing / 2, px) #000
  background: $brightwhite
  z-index: 100

#fmogh
  absolute: top unit(2 * $spacing, px) right -50px
  transform: rotate(45deg)
  background: $white
  color: $brightwhite

  &:hover
    background: linear-gradient(top, $tomato, darken($tomato, 30%))
  a
    padding: unit($spacing / 2, px) unit(3 * $spacing, px)
    color: inherit
    background: inherit
    text-decoration: none

#timer
  width: $timerwidth
  font-size: unit(4 * $spacing, px)
  font-family: Inconsolata, Consolata, monospace
  text-align: center
  absolute: top $spacing left unit($gridline + 1.5 * $spacing, px)
  padding: $spacing $timerpadding
  border-radius: unit(2 * $spacing, px)
  color: $white
  cursor: pointer
  z-index: 10

  &.work
    timer($tomato)
  &.break
    timer($darkgray)

#title
  cursor: pointer
  absolute: top unit(3 * $spacing, px) left unit($timerleft + $timerwidth + 2 * $timerpadding + $spacing, px)
  feedback()

  &.editing
    input { display: block }
    span { display: none }

  input, span { font-size: unit(2 * $spacing, px) }
  input { display: none }
  span { display: block }

#new-task
  absolute: bottom unit($spacing / 2, px) left $gridline

#screen
  fixed: top left
  width: 100%
  height: 100%
  background: $lightgray
  opacity: 0.666
  z-index: 10
  display: none

  &.running
    display: block

#tasks
  clear: left
  list-style: none
  text-align: left
  margin-top: unit($timerheight + 6 * $spacing, px)
  z-index: 1

  li
    padding: unit($spacing / 2, px)
    position: relative
    clear: both
    height: unit(1.1 * $spacing, px)

    &:nth-child(even)
      background: #eee

  li.task
    &:hover
      cursor: move
      .icon { opacity: 0.3 }

    &.active
      background: darken($tomato, 60%)
      color: $white
      .cursor { opacity: 1.0 }

    &.editing
      .input { display: block }
      .name { display: none }

    &.finished
      color: $darkgray
      background: $lightgray
      cursor: default

      .finish { opacity: 1.0 }
      .cursor, .remove { visibility: hidden }

    &.hidden
      display: none

    .timestamp
      display: none
      float: left

    .input
      display: none
      float: left
      font-size: unit($spacing - 3, px)

    .name
      display: block
      float: left
      feedback()

    .icon
      cursor: pointer
      width: $spacing
      margin-right: unit($spacing / 2, px)
      float: left
      opacity: 0.0

      &:hover { opacity: 1.0 }

      &.remove
        float: right
        margin-right: 0
        color: $tomato

      &.finish { color: $green }

    .tomatoes
      absolute: top unit($spacing / 2, px) right unit(2 * $spacing, px)

      span
        display: block
        float: right
        width: $spacing
        height: $spacing
        background: $tomato
        border-radius: $spacing
        margin-right: 2px

.modal
  fixed: top $spacing left $spacing
  z-index: 1000
  padding: $spacing
  background: $white
  width: 33em
  border-radius: $spacing
  box-shadow: 0 0 unit($spacing / 2, px) $black
  display: none

  p
    font: 16px/1.5 Rosario, sans-serif
    margin-bottom: $spacing

  button
    smooth-button()

.tool-button
  cursor: pointer
  color: $darkgray
  &:hover { color: $black }

#halp
  absolute: bottom unit(0.75 * $spacing, px) right unit(0.5 * $spacing, px)

#config
  absolute: bottom unit(0.85 * $spacing, px) right unit(1.5 * $spacing, px)

#filter
  absolute: bottom unit($spacing / 2, px) right unit(2.5 * $spacing, px)
  font-size: smaller

